Bug 368498 - Kmail does not open links with target="_blank"
Summary: Kmail does not open links with target="_blank"
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-09 14:19 UTC by bake.earmuffs
Modified: 2016-10-28 04:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bake.earmuffs 2016-09-09 14:19:20 UTC
If a html message contains an anchor with target="_blank", clicking such link does not do anything. Links without target work fine

Reproducible: Always




Sample message that show the issue:

From a@b.c Fri Sep 09 12:59:16 2016
Delivered-To: d@w.d
Content-Type: text/html; charset=UTF-8

<!doctype html>
<html lang="en">
<head></head>
<body>
<a href="http://google.com">I'm working</a><br>
<a href="http://google.com" target="_blank">I'm not</a>
</body>
</html>
Comment 1 Laurent Montel 2016-10-14 15:23:51 UTC
Known bug.
It's a regression in qtwebengine support
Comment 2 Laurent Montel 2016-10-27 19:04:13 UTC
Git commit 70173a8245c6f0401619f5be9cc4770451feeb21 by Montel Laurent.
Committed on 27/10/2016 at 19:02.
Pushed by mlaurent into branch 'master'.

Fix Bug 368498 - Kmail does not open links with target="_blank"

FIXED-IN: 5.4.0

M  +1    -1    webengineviewer/src/CMakeLists.txt
A  +47   -0    webengineviewer/src/webenginenavigationrequestinterceptor.cpp     [License: LGPL (v2+)]
A  +43   -0    webengineviewer/src/webenginenavigationrequestinterceptor.h     [License: LGPL (v2+)]
M  +22   -2    webengineviewer/src/webengineview.cpp

http://commits.kde.org/messagelib/70173a8245c6f0401619f5be9cc4770451feeb21
Comment 3 Laurent Montel 2016-10-28 04:42:07 UTC
Git commit 1109b48ef544914353c87e1eb47cf08bafceeabc by Montel Laurent.
Committed on 28/10/2016 at 04:41.
Pushed by mlaurent into branch 'Applications/16.08'.

Fix Bug 368498 - Kmail does not open links with target="_blank"

FIXED-IN: 5.4.0
(cherry picked from commit 70173a8245c6f0401619f5be9cc4770451feeb21)

M  +1    -1    webengineviewer/src/CMakeLists.txt
A  +47   -0    webengineviewer/src/webenginenavigationrequestinterceptor.cpp     [License: LGPL (v2+)]
A  +43   -0    webengineviewer/src/webenginenavigationrequestinterceptor.h     [License: LGPL (v2+)]
M  +22   -2    webengineviewer/src/webengineview.cpp

http://commits.kde.org/messagelib/1109b48ef544914353c87e1eb47cf08bafceeabc