Fix Bug 368498 - Kmail does not open links with target="_blank"

FIXED-IN: 5.4.0
BUG: 368498
(cherry picked from commit 70173a8245c6f0401619f5be9cc4770451feeb21)